# inplace_string

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  appveyor.yml  conanfile.py
cmake/: global_flags.cmake  gtest_CMakeLists.txt.in  gtest_download.cmake  inplace_string-config.cmake  tools.cmake
src/: CMakeLists.txt
src/include/: CMakeLists.txt  in_place_string.h  inplace_string.h
src/include/inplace_string/: inplace_string.h
src/tests/: CMakeLists.txt  tests.cpp
test_package/: CMakeLists.txt  conanfile.py  tests.cpp
